--- a/quiet-notes-web/src/app/constants.scss
+++ b/quiet-notes-web/src/app/constants.scss
@@ -1,2 +1,3 @@
+$qn-namespace: "quiet-notes";
 $qn-padding: 0.5rem;
 $qn-margin: 0.5rem;
